--- a/cars/_pages/about.html
+++ b/cars/_pages/about.html
@@ -1,7 +1,7 @@
 ---
 title: About
 layout: default
-permalink: /ve-kia-yen-nghia
+permalink: /thong-tin
 ---
 
 <!--Page Header-->
@@ -9,11 +9,11 @@ permalink: /ve-kia-yen-nghia
   <div class="container">
     <div class="page-header_wrap">
       <div class="page-heading">
-        <h1>About Us</h1>
+        <h1>Về Showroom Kia Yên Nghĩa</h1>
       </div>
       <ul class="coustom-breadcrumb">
-        <li><a href="#">Home</a></li>
-        <li>About Us</li>
+        <li><a href="/">Home</a></li>
+        <li>Thông tin</li>
       </ul>
     </div>
   </div>
