change page layout

--- a/cars/_pages/about.html
+++ b/cars/_pages/about.html
@@ -1,26 +1,8 @@
 ---
 title: About
-layout: default
+layout: page
 permalink: /thong-tin
 ---
-
-<!--Page Header-->
-<section class="page-header aboutus_page">
-  <div class="container">
-    <div class="page-header_wrap">
-      <div class="page-heading">
-        <h1>Về Showroom Kia Yên Nghĩa</h1>
-      </div>
-      <ul class="coustom-breadcrumb">
-        <li><a href="/">Home</a></li>
-        <li>Thông tin</li>
-      </ul>
-    </div>
-  </div>
-  <!-- Dark Overlay-->
-  <div class="dark-overlay"></div>
-</section>
-<!-- /Page Header-->
 
 <!--About-us-->
 <section class="about_us section-padding">
