--- a/cars/_pages/lai-thu.html
+++ b/cars/_pages/lai-thu.html
@@ -1,33 +1,15 @@
 ---
-title: Yêu cầu báo giá
-layout: default
-permalink: /bao-gia
+title: Đăng ký lái thử miễn phí
+layout: page
+permalink: /lai-thu
 ---
-
-<!--Page Header-->
-<section class="page-header contactus_page">
-    <div class="container">
-        <div class="page-header_wrap">
-            <div class="page-heading">
-                <h1>Liên hệ với chúng tôi</h1>
-            </div>
-            <ul class="coustom-breadcrumb">
-                <li><a href="#">Trang chủ</a></li>
-                <li>Liên hệ</li>
-            </ul>
-        </div>
-    </div>
-    <!-- Dark Overlay-->
-    <div class="dark-overlay"></div>
-</section>
-<!-- /Page Header-->
 
 <!--Contact-us-->
 <section class="contact_us section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h3>Gửi email cho chúng tôi</h3>
+                <h3>Vui điền thông tin để đăng ký</h3>
                 <div class="contact_form gray-bg">
                     <form action="#" method="get">
                         <div class="form-group">
@@ -54,7 +36,7 @@ permalink: /bao-gia
                 </div>
             </div>
             <div class="col-md-6">
-                <h3>Thông tin</h3>
+                <h3>Thông tin Showroom</h3>
                 <div class="contact_detail">
                     <ul>
                         <li>
