change page layout

--- a/cars/_pages/about.html
+++ b/cars/_pages/about.html
@@ -5,7 +5,7 @@ permalink: /thong-tin
 ---
 
 <!--About-us-->
-<section class="about_us section-padding">
+<section class="about_us">
   <div class="container">
     <div class="section-header text-center">
       <h2>Welcome <span>to the Car Dealer</span></h2>
