--- a/cars/_pages/lai-thu.html
+++ b/cars/_pages/lai-thu.html
@@ -5,7 +5,7 @@ permalink: /lai-thu
 ---
 
 <!--Contact-us-->
-<section class="contact_us section-padding">
+<section class="contact_us">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
