--- a/products/models.html
+++ b/products/models.html
@@ -40,10 +40,10 @@ layout: default
                       <p class="list-price">{{ car.price }}</p>
                       <div class="car-location"><span><i class="fa fa-map-marker" aria-hidden="true"></i> Kia Yên Nghĩa</span></div>
                       <ul class="features_list">
-                        <li><i class="fa fa-road" aria-hidden="true"></i>35,000 km</li>
-                        <li><i class="fa fa-tachometer" aria-hidden="true"></i>30.000 miles</li>
-                        <li><i class="fa fa-calendar" aria-hidden="true"></i>2005 model</li>
-                        <li><i class="fa fa-car" aria-hidden="true"></i>Diesel</li>
+                        <li><i class="fa fa-road" aria-hidden="true"></i>0 km</li>
+                        <li><i class="fa fa-tachometer" aria-hidden="true"></i>0 miles</li>
+                        <li><i class="fa fa-calendar" aria-hidden="true"></i>2020 model</li>
+                        <li><i class="fa fa-car" aria-hidden="true"></i>0</li>
                       </ul>
                     </div>
                   </div>
